<resources>
    <string name="app_name" translatable="false">BUX</string>

    <string name="activity_product_identifier_title">Product</string>
    <string name="activity_product_feed_title">Product Feed</string>
    <string name="product_identifier_input_hint">Identifier</string>
    <string name="product_details_button">Get details</string>

    <string name="product_identifier_label">Product identifier:</string>
    <string name="previous_day_closing_price_label">Previous day closing price:</string>
    <string name="current_price_label">Current price:</string>
    <string name="price_difference_label">Price difference:</string>
    <string name="last_update_label">Last update:</string>
    <string name="trading_product_label">Trading product</string>
    <string name="not_available">n/a</string>
    <string name="action_retry">Retry</string>
    <string name="network_connectivity_banner">No network connection</string>

    <string name="error_network">Network unavailable. Please check your internet connection or try again later.</string>
    <string name="api_error_server_unavailable">Service is temporarily unavailable. Please try again later.</string>
    <string name="api_error_unauthorized">You don\'t have permissions to perform this request. Please contact support.</string>
    <string name="api_error_network">@string/error_network</string>
    <string name="api_error_general">Failed to get product details. Please contact support or try again later.</string>
    <string name="api_error_product_not_found">Product with this identifier not found.</string>

    <string name="rtf_error_not_connected">Failed to connect to product feed. Please try again.</string>
    <string name="rtf_error_not_subscribed">Failed to subscribe to product feed. Please try again.</string>
    <string name="rtf_error_server_unavailable">Service is temporarily unavailable. Please try again later.</string>
    <string name="rtf_error_network">@string/error_network</string>
    <string name="rtf_error_general">Failed to get product feed. Please contact support or try again later.</string>
</resources>
